--- a/src/styles/mainScreen.css
+++ b/src/styles/mainScreen.css
@@ -1,7 +1,7 @@
 .aside {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: wrap;
   height: 70px;
   justify-content: space-evenly;
 }
@@ -23,7 +23,7 @@
 .mainBox {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: wrap;
   justify-content: space-evenly;
   margin-bottom: 160px;
   width: 100%;
