--- a/src/styles/FooterSpec.css
+++ b/src/styles/FooterSpec.css
@@ -1,14 +1,12 @@
 .cocktailIcon {
+  border: none;
   height: 40px;
-  left: 16px;
-  position: absolute;
   width: 40px;
 }
 
 .explorerIcon {
+  border: none;
   height: 40px;
-  left: 160px;
-  position: absolute;
   width: 40px;
 }
 
@@ -18,16 +16,16 @@
   display: flex;
   flex-direction: row;
   height: 58px;
+  justify-content: space-between;
   max-width: 360px;
-  padding: 10px;
+  padding: 10px 20px 10px 16px;
   position: fixed;
   width: 360px;
 }
 
-.forkIcon {
+.mealIcon {
+  border: none;
   height: 40px;
-  left: 302px;
-  position: absolute;
   width: 40px;
 }
 
