--- a/src/styles/Details.css
+++ b/src/styles/Details.css
@@ -1,4 +1,74 @@
+.btns {
+  height: 40px;
+  padding: 10px;
+}
+
 .cardDetails {
   display: flex;
+  max-width: 100px;
+  min-width: 100px;
   text-align: center;
+  width: 100px;
+}
+
+.carousel {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  max-width: 360px;
+  min-width: 360px;
+  width: 360px;
+}
+
+.icoBtn {
+  border: none;
+  height: 26px;
+  width: 26px;
+}
+
+.img.w-50.h-50 {
+  height: 200px;
+  left: 0;
+  margin: 0;
+  max-height: 200px;
+  max-width: 360px;
+  min-height: 200px;
+  min-width: 360px;
+  padding: 0;
+  top: 0;
+  width: 360px;
+}
+
+.recipe {
+  background: rgb(236, 236, 236);
+  border-radius: 4px;
+  text-align: justify;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  max-width: 360px;
+  width: 360;
+}
+
+.section {
+  margin: 10px;
+}
+
+.sub {
+  color: darkgray;
+  margin-left: 10px;
+}
+
+.title {
+  align-items: center;
+  align-self: center;
+  display: flex;
+  flex-direction: row;
+  height: 40px;
+  justify-content: space-between;
+  padding: 5px 0 5px 10px;
+  vertical-align: center;
+  width: 100%;
 }
