--- a/src/styles/Details.css
+++ b/src/styles/Details.css
@@ -1,3 +1,27 @@
+.botton {
+  align-items: center;
+  display: flex;
+  height: 90px;
+  justify-content: center;
+  margin: 10px;
+  max-height: 90px;
+  max-width: 360px;
+  min-height: 90px;
+  min-width: 360px;
+  padding: 10px;
+  width: 360px;
+}
+
+.btnBottom {
+  background: rgb(108, 227, 79);
+  height: 76px;
+  max-height: 76px;
+  max-width: 339px;
+  min-height: 76px;
+  min-width: 339px;
+  width: 339px;
+}
+
 .btns {
   height: 40px;
   padding: 10px;
@@ -9,6 +33,10 @@
   min-width: 100px;
   text-align: center;
   width: 100px;
+}
+
+.cardDtls {
+  margin-right: 15px;
 }
 
 .carousel {
@@ -26,7 +54,7 @@
   width: 26px;
 }
 
-.img.w-50.h-50 {
+.image {
   height: 200px;
   left: 0;
   margin: 0;
